unpackaged/main/default/objects/pse__fflib_XXXBatchTestOpportunity2LineItem__c/pse__fflib_XXXBatchTestOpportunity2LineItem__c.object-meta.xml
<CustomObject>
    <description>NOT TO PACKAGE. Only for unit test</description>
    <label>XXX Batch Test Opportunity 2 Line Item</label>
    <nameField>
        <label>XXX Batch Test Opportunity 2 Line Item N</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>XXX Batch Test Opportunity 2 Line Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>