unpackaged/main/default/objects/pse__fflib_XXXBatchTestOpportunity2LineItem__c/fields/pse__PricebookEntryId__c.field-meta.xml
<CustomField>
    <fullName>pse__PricebookEntryId__c</fullName>
    <label>XXX Pricebook Entry</label>
    <length>255</length>
    <type>Text</type>
</CustomField>