unpackaged/main/default/objects/pse__fflib_XXXBatchTestOpportunity2LineItem__c/fields/pse__Quantity__c.field-meta.xml
<CustomField>
    <fullName>pse__Quantity__c</fullName>
    <label>XXX Quantity</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>