unpackaged/main/default/objects/pse__fflib_XXXBatchTestOpportunity2LineItem__c/fields/pse__UnitPrice__c.field-meta.xml
<CustomField>
    <fullName>pse__UnitPrice__c</fullName>
    <label>XXX Sales Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>