unpackaged/main/default/objects/pse__fflib_XXXBatchTestOpportunity2LineItem__c/fields/pse__XXXBatchTestOpportunity2__c.field-meta.xml
<CustomField>
    <fullName>pse__XXXBatchTestOpportunity2__c</fullName>
    <label>XXX Batch Test Opportunity 2</label>
    <referenceTo>pse__fflib_XXXBatchTestOpportunity2__c</referenceTo>
    <relationshipLabel>XXX Batch Test Opportunity 2 Line Items</relationshipLabel>
    <relationshipName>XXX_Batch_Test_Opportunity_2_Line_Items</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>